--- a/MDK-ARM/custom-modbus-slave-master.uvprojx
+++ b/MDK-ARM/custom-modbus-slave-master.uvprojx
@@ -534,6 +534,16 @@
               <FileType>1</FileType>
               <FilePath>..\USER\Modbus\Src\rtu\slave\rtuslaveeventcenter.c</FilePath>
             </File>
+            <File>
+              <FileName>functioninputregister.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\USER\Modbus\Src\function\functioninputregister.c</FilePath>
+            </File>
+            <File>
+              <FileName>mbcrc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\USER\Modbus\Src\mbcrc.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
