--- a/MDK-ARM/custom-modbus-slave-master.uvprojx
+++ b/MDK-ARM/custom-modbus-slave-master.uvprojx
@@ -515,19 +515,9 @@
           <GroupName>USER/Modbus</GroupName>
           <Files>
             <File>
-              <FileName>serial.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\USER\Modbus\Src\serial.c</FilePath>
-            </File>
-            <File>
               <FileName>rtuprotocol.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\USER\Modbus\Src\rtu\rtuprotocol.c</FilePath>
-            </File>
-            <File>
-              <FileName>timer.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\USER\Modbus\Src\timer.c</FilePath>
             </File>
             <File>
               <FileName>rtuslaveeventcenter.c</FileName>
@@ -542,7 +532,17 @@
             <File>
               <FileName>crc.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\USER\Modbus\Src\crc.c</FilePath>
+              <FilePath>..\USER\Modbus\Src\util\crc.c</FilePath>
+            </File>
+            <File>
+              <FileName>timer.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\USER\Modbus\Src\rtu\support\timer.c</FilePath>
+            </File>
+            <File>
+              <FileName>serial.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\USER\Modbus\Src\rtu\support\serial.c</FilePath>
             </File>
           </Files>
         </Group>
