--- a/MDK-ARM/custom-modbus-slave-master.uvprojx
+++ b/MDK-ARM/custom-modbus-slave-master.uvprojx
@@ -544,6 +544,16 @@
               <FileType>1</FileType>
               <FilePath>..\USER\Modbus\Src\rtu\support\serial.c</FilePath>
             </File>
+            <File>
+              <FileName>master.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\USER\Modbus\Src\rtu\master\master.c</FilePath>
+            </File>
+            <File>
+              <FileName>rtumastereventcenter.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\USER\Modbus\Src\rtu\master\rtumastereventcenter.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
