--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "modbusprotocol.h": "c",
         "datatype.h": "c",
         "serialprotocol.h": "c",
-        "modbusrtuprotocol.h": "c"
+        "modbusrtumode.h": "c",
+        "modbusfunction.h": "c"
     }
 }
